[project]
name = "rtanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Russell Poldrack", email = "poldrack@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.7.0",
    "flake8>=7.1.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "scipy>=1.15.2",
]

[project.scripts]
pytest-tutorial = "pytest_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
